<resources>
    <string name="app_name">"FocusListener "</string>
    <string name="edt_first_name">First Name</string>
    <string name="edt_last_name">Last_Name</string>
    <string name="edt_email_id">Email-Id</string>
    <string name="edt_password">Password</string>
    <string name="edt_contact_number">Contact Number (10 digits only)</string>
    <string name="textprofilecomplete">Profile Complete  :</string>
</resources>
