<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.focuslistener.MainActivity"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/edt_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_first_name"
        android:textSize="20sp"
        android:inputType="text"
        android:maxLength="20"/>

    <EditText
        android:id="@+id/edt_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_last_name"
        android:textSize="20sp"
        android:inputType="text"
        android:maxLength="20"/>

    <EditText
        android:id="@+id/edt_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_email_id"
        android:textSize="20sp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_password"
        android:textSize="20sp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edt_contact_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_contact_number"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:maxLength="10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textprofilecomplete"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textProfileComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="0"/>

</LinearLayout>
